--- a/Isens/ISense/isense.ui
+++ b/Isens/ISense/isense.ui
@@ -1,6 +1,6 @@
 <ui version="4.0">
- <class>MainWindow</class>
- <widget class="QMainWindow" name="MainWindow" >
+ <class>ISense</class>
+ <widget class="QMainWindow" name="ISense" >
   <property name="geometry" >
    <rect>
     <x>0</x>
@@ -10,7 +10,7 @@
    </rect>
   </property>
   <property name="windowTitle" >
-   <string>MainWindow</string>
+   <string>ISense</string>
   </property>
   <widget class="QMenuBar" name="menuBar" />
   <widget class="QToolBar" name="mainToolBar" />
