--- a/Isens/ISense/isense.ui
+++ b/Isens/ISense/isense.ui
@@ -58,6 +58,12 @@
    <addaction name="menuHelp"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+   <property name="toolButtonStyle">
+    <enum>Qt::ToolButtonTextUnderIcon</enum>
+   </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
    </attribute>
@@ -153,8 +159,26 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>actionList_all_sensors</sender>
+   <signal>triggered()</signal>
+   <receiver>ISense</receiver>
+   <slot>createSensorsTable()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>281</x>
+     <y>180</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>displayAbout()</slot>
+  <slot>createSensorsTable()</slot>
+  <slot>sensorsTableClosed()</slot>
  </slots>
 </ui>
