--- a/Isens/ISense/isense.ui
+++ b/Isens/ISense/isense.ui
@@ -73,6 +73,9 @@
    <addaction name="actionConnect"/>
    <addaction name="actionDisconnect_all_sensors"/>
    <addaction name="actionList_all_sensors"/>
+   <addaction name="separator"/>
+   <addaction name="actionOpen_database"/>
+   <addaction name="actionSave_database"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionConnect">
@@ -119,6 +122,24 @@
   <action name="actionAbout_QT">
    <property name="text">
     <string>About QT</string>
+   </property>
+  </action>
+  <action name="actionOpen_database">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/Icons/Icons/Open.png</normaloff>:/Icons/Icons/Open.png</iconset>
+   </property>
+   <property name="text">
+    <string>Open database</string>
+   </property>
+  </action>
+  <action name="actionSave_database">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/Icons/Icons/Save.png</normaloff>:/Icons/Icons/Save.png</iconset>
+   </property>
+   <property name="text">
+    <string>Save database</string>
    </property>
   </action>
  </widget>
