--- a/Isens/ISense/addsensordialog.ui
+++ b/Isens/ISense/addsensordialog.ui
@@ -16,6 +16,18 @@
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>250</width>
+    <height>150</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>250</width>
+    <height>150</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
@@ -48,6 +60,9 @@
      <property name="standardButtons">
       <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
      </property>
+     <property name="centerButtons">
+      <bool>false</bool>
+     </property>
     </widget>
    </item>
   </layout>
@@ -56,29 +71,13 @@
  <connections>
   <connection>
    <sender>buttonBox</sender>
-   <signal>accepted()</signal>
-   <receiver>AddSensorDialog</receiver>
-   <slot>accept()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>248</x>
-     <y>254</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>157</x>
-     <y>274</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>buttonBox</sender>
    <signal>rejected()</signal>
    <receiver>AddSensorDialog</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>316</x>
-     <y>260</y>
+     <x>124</x>
+     <y>129</y>
     </hint>
     <hint type="destinationlabel">
      <x>286</x>
@@ -87,14 +86,46 @@
    </hints>
   </connection>
   <connection>
-   <sender>AddSensorDialog</sender>
-   <signal>finished(int)</signal>
+   <sender>IPText</sender>
+   <signal>editingFinished()</signal>
    <receiver>AddSensorDialog</receiver>
-   <slot>onClose()</slot>
+   <slot>onEdit()</slot>
    <hints>
     <hint type="sourcelabel">
      <x>124</x>
+     <y>101</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>124</x>
      <y>74</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>NameText</sender>
+   <signal>editingFinished()</signal>
+   <receiver>AddSensorDialog</receiver>
+   <slot>onEdit()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>124</x>
+     <y>47</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>124</x>
+     <y>74</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>buttonBox</sender>
+   <signal>accepted()</signal>
+   <receiver>AddSensorDialog</receiver>
+   <slot>accept()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>124</x>
+     <y>129</y>
     </hint>
     <hint type="destinationlabel">
      <x>124</x>
@@ -105,5 +136,7 @@
  </connections>
  <slots>
   <slot>onClose()</slot>
+  <slot>onEdit()</slot>
+  <slot>onRejected()</slot>
  </slots>
 </ui>
